--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@progress/kendo-angular-excel-export": "1 - 2",
     "@progress/kendo-angular-grid": "^3.7.1",
     "@progress/kendo-angular-inputs": "2 - 3",
+    "@progress/kendo-angular-intl": "^1.0.0",
     "@progress/kendo-angular-l10n": "^1.1.0",
     "@progress/kendo-angular-pdf-export": "^1.1.2",
     "@progress/kendo-angular-popup": "^2.0.0",
@@ -39,10 +40,10 @@
     "@progress/kendo-theme-default": "latest",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-toasta": "^0.1.0",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.0.0",
-    "zone.js": "~0.8.26",
-    "@progress/kendo-angular-intl": "^1.0.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
